[gd_scene load_steps=31 format=3 uid="uid://djjf64uy1wwh5"]

[ext_resource type="Shader" uid="uid://coty8t1yprldg" path="res://common/shaders/hit_flash.tres" id="1_i7mka"]
[ext_resource type="Script" uid="uid://ceax025bx2qoq" path="res://Scenes/SlimeKingBoss/slime_boss.gd" id="1_rb686"]
[ext_resource type="Texture2D" uid="uid://cimvymvaqct7p" path="res://Art/Mobs/test-slime/slime-blue.png" id="2_rb686"]
[ext_resource type="Texture2D" uid="uid://bldu00w55v5rq" path="res://Art/Mobs/test-slime/DeadSlimeStatic.png" id="3_pm3xo"]
[ext_resource type="Texture2D" uid="uid://xd5uwa23lwdy" path="res://Art/Mobs/test-slime/slime-death.png" id="4_fjmkv"]
[ext_resource type="Script" uid="uid://catk67hu6tvbl" path="res://Scenes/SlimeKingBoss/boss_follow.gd" id="5_i7mka"]
[ext_resource type="PackedScene" uid="uid://vved47r3t0bv" path="res://Scenes/enemy/hitflash_animation_player.tscn" id="6_1o4jx"]
[ext_resource type="PackedScene" uid="uid://b3ioorn7pclbg" path="res://Scenes/enemy/damage_numbers_origin.tscn" id="7_fxidt"]
[ext_resource type="PackedScene" uid="uid://bta06xs8obxpk" path="res://Scenes/enemy/hurtbox.tscn" id="8_4f8qf"]
[ext_resource type="Script" uid="uid://dt1txnawjw1a7" path="res://Scenes/SlimeKingBoss/boss_hurtbox.gd" id="10_pm3xo"]
[ext_resource type="Script" uid="uid://j324fgbu7lfg" path="res://Scenes/SlimeKingBoss/boss_jumping.gd" id="11_pm3xo"]
[ext_resource type="PackedScene" uid="uid://b2lamxk4smu3f" path="res://Scenes/Healthbar/healthbar.tscn" id="12_fjmkv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cce5e"]
resource_local_to_scene = true
shader = ExtResource("1_i7mka")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_nndgq"]
atlas = ExtResource("2_rb686")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_33o5n"]
atlas = ExtResource("3_pm3xo")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8266"]
atlas = ExtResource("4_fjmkv")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq7oj"]
atlas = ExtResource("4_fjmkv")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cp7n"]
atlas = ExtResource("4_fjmkv")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fhrh"]
atlas = ExtResource("4_fjmkv")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21xct"]
atlas = ExtResource("4_fjmkv")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjp0u"]
atlas = ExtResource("4_fjmkv")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ltbt"]
atlas = ExtResource("2_rb686")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k15l"]
atlas = ExtResource("2_rb686")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd8gu"]
atlas = ExtResource("2_rb686")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xrj5"]
atlas = ExtResource("2_rb686")
region = Rect2(48, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_82cu7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nndgq")
}],
"loop": true,
"name": &"charging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33o5n")
}],
"loop": true,
"name": &"dead-static",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8266")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq7oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cp7n")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fhrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21xct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjp0u")
}],
"loop": false,
"name": &"emerge",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ltbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k15l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd8gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xrj5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vdo4q"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o7nou"]
radius = 283.002

[sub_resource type="CircleShape2D" id="CircleShape2D_qjnde"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2b54r"]
radius = 6.0

[node name="SlimeKingBoss" type="CharacterBody2D"]
script = ExtResource("1_rb686")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_cce5e")
position = Vector2(9.53674e-07, 1.90735e-06)
scale = Vector2(4.125, 4.125)
sprite_frames = SubResource("SpriteFrames_82cu7")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 21)
shape = SubResource("CircleShape2D_vdo4q")

[node name="ChaseArea" type="Area2D" parent="."]
visible = false
script = ExtResource("5_i7mka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource("CircleShape2D_o7nou")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, 17)
shape = SubResource("CircleShape2D_qjnde")
debug_color = Color(0.850682, 0.337885, 0.417851, 0.42)

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HitflashAnimationPlayer" parent="." instance=ExtResource("6_1o4jx")]

[node name="DamageNumbersOrigin" parent="." instance=ExtResource("7_fxidt")]
visible = false

[node name="Hurtbox" parent="." instance=ExtResource("8_4f8qf")]
visible = false
script = ExtResource("10_pm3xo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_2b54r")
debug_color = Color(0.909583, 0.271589, 0.324396, 0.42)

[node name="Jumping" type="Node2D" parent="."]
visible = false
script = ExtResource("11_pm3xo")

[node name="SpecialAttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ChargingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("12_fjmkv")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -34.0
offset_right = 120.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 461.0
offset_top = 585.0
offset_right = 546.0
offset_bottom = 610.0
text = "King Slime"

[connection signal="body_entered" from="ChaseArea" to="ChaseArea" method="_on_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="ChaseArea" method="_on_body_exited"]
[connection signal="timeout" from="SpecialAttackTimer" to="ChaseArea" method="_on_special_attack_timer_timeout"]
[connection signal="timeout" from="ChargingTimer" to="ChaseArea" method="_on_charging_timer_timeout"]
